apps/meshtastic/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meshtastic
  labels:
    app: meshtastic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meshtastic
  template:
    metadata:
      labels:
        app: meshtastic
      annotations:
        diun.enable: "true"
    spec:
      containers:
        - name: meshtastic
          image: ghcr.io/meshtastic/web:2.6.7
          ports:
            - containerPort: 8080
      nodeSelector:
        kubernetes.io/arch: arm64
