apps/meshtastic/service.yml
apiVersion: v1
kind: Service
metadata:
  name: meshtastic
  labels:
    app: meshtastic
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: meshtastic
